@@ -13,8 +13,10 @@ import android.content.DialogInterface;
 import android.content.Intent;
 import android.content.SharedPreferences;
 import android.content.res.Configuration;
+import android.net.Uri;
 import android.os.Bundle;
 import android.preference.PreferenceManager;
+import android.support.v4.content.FileProvider;
 import android.view.WindowManager;
 import net.yura.android.AndroidMeActivity;
 import net.yura.android.AndroidMeApp;
@@ -238,6 +240,23 @@ public class GameActivity extends AndroidMeActivity implements GameHelper.GameHe
 
     // ----------------------------- GooglePlayGameServices -----------------------------
 
+
+    @Override
+    public void sendFile(String filePath) {
+
+        Uri contentUri = FileProvider.getUriForFile(AndroidMeActivity.DEFAULT_ACTIVITY, "net.yura.domination.fileprovider", new File(filePath));
+
+        // ONLY WORKS API 16+ (4.1+) as that is when Intent.migrateExtraStreamToClipData() was added for permissions to work
+
+        Intent shareIntent = new Intent(Intent.ACTION_SEND);
+        shareIntent.setType("text/plain");
+        shareIntent.putExtra(Intent.EXTRA_STREAM, contentUri);
+        shareIntent.addFlags(Intent.FLAG_GRANT_READ_URI_PERMISSION);
+        shareIntent.putExtra(Intent.EXTRA_EMAIL, new String[] { "yura@yura.net" });
+        shareIntent.putExtra(Intent.EXTRA_SUBJECT, "Saved Game");
+        startActivity(Intent.createChooser(shareIntent, "Choose an app"));
+    }
+
     @Override
     public void beginUserInitiatedSignIn() {
         mHelper.beginUserInitiatedSignIn();
@@ -342,7 +361,7 @@ public class GameActivity extends AndroidMeActivity implements GameHelper.GameHe
                 final File autoSaveFile = DominationMain.getAutoSaveFile();
                 final File tempSaveFile = new File(autoSaveFile.getParent(),autoSaveFile.getName()+".part");
 
-                risk.parserAndWait("savegame "+DominationMain.getAutoSaveFileURL()+".part");
+                risk.parserAndWait("savegame "+DominationMain.getAutoSaveFile()+".part");
                 // if we may have closed the game while also closing the activity
                 // the save probably failed, and the rename will fail for sure.
                 if ( shouldSaveGame() ) {
